<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:background="@color/black"
	android:paddingTop="15dp"
	android:paddingBottom="15dp"
	android:layout_height="match_parent">
	<LinearLayout
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:layout_height="0dp"
		android:layout_weight="3">
		<CheckBox
			android:buttonTint="@color/ash"
			android:textColor="@color/ash"
			android:focusable="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/repeatCheckBoxID"
			android:text="@string/repeat"/>
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<Button
				android:background="@drawable/round_button"
				android:textColor="@color/ash"
				android:visibility="visible"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/_23_12_2019"
				android:id="@+id/datePickerButton"
				android:layout_gravity="center"/>
			<LinearLayout
				android:id="@+id/RepeatedID"
				android:visibility="gone"
				android:layout_width="match_parent"
				android:layout_height="30dp"
				android:orientation="horizontal"
				android:weightSum="7">

				<Button
					android:background="@drawable/round_button"
					android:textColor="@color/ash"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_marginStart="10dp"
					android:layout_marginEnd="5dp"
					android:layout_height="30dp"
					android:text="@string/sat"
					android:id="@+id/buttonSatID"/>
				<Button
					android:background="@drawable/round_button"
					android:textColor="@color/ash"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_marginStart="5dp"
					android:layout_marginEnd="5dp"
					android:layout_height="30dp"
					android:text="@string/sun"
					android:id="@+id/buttonSunID"/>
				<Button
					android:background="@drawable/round_button"
					android:textColor="@color/ash"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_marginStart="5dp"
					android:layout_marginEnd="5dp"
					android:layout_height="30dp"
					android:text="@string/mon"
					android:id="@+id/buttonMonID"/>
				<Button
					android:background="@drawable/round_button"
					android:textColor="@color/ash"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_marginStart="5dp"
					android:layout_marginEnd="5dp"
					android:layout_height="30dp"
					android:text="@string/tues"
					android:id="@+id/buttonTuesID"/>
				<Button
					android:background="@drawable/round_button"
					android:textColor="@color/ash"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_marginStart="5dp"
					android:layout_marginEnd="5dp"
					android:layout_height="30dp"
					android:text="@string/wed"
					android:id="@+id/buttonWedID"/>
				<Button
					android:background="@drawable/round_button"
					android:textColor="@color/ash"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_marginStart="5dp"
					android:layout_marginEnd="5dp"
					android:layout_height="30dp"
					android:text="@string/thu"
					android:id="@+id/buttonThursID"/>
				<Button
					android:background="@drawable/round_button"
					android:textColor="@color/ash"
					android:layout_width="0dp"
					android:layout_weight="1"
					android:layout_marginStart="5dp"
					android:layout_marginEnd="10dp"
					android:layout_height="30dp"
					android:text="@string/fri"
					android:id="@+id/buttonFriID"/>
			</LinearLayout>
		</FrameLayout>
		<Button
			android:id="@+id/cleanigAreaID"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/lightBlue"
			android:layout_marginLeft="60dp"
			android:layout_marginRight="60dp"
			android:layout_gravity="center"
			android:layout_marginTop="10dp"
			android:text="@string/select_cleanign_area"
			android:textColor="@color/black"
			/>
	</LinearLayout>
</LinearLayout>