<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".feedback">

    <include
        layout="@layout/activity_toolbar"
        android:id="@+id/feedbackToolbarID"
        />

    <EditText
        android:textColor="@color/ash"
        android:id="@+id/feedbackNameID"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_name"
        android:textColorHint="@color/ash"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/feedbackEmailID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:textColor="@color/ash"
        android:textColorHint="@color/ash"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/feedbackTextID"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/feedback"
        android:textColor="@color/ash"
        android:textColorHint="@color/ash"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />

    <Button
        android:background="@color/blue"
        android:id="@+id/feedbackSendID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        tools:ignore="InvalidId" />

</LinearLayout>